--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
 	place-items: center;
 	background: var(--pale-blue) url("images/pattern-background-mobile.svg") no-repeat;
 	background-size: contain;
+	min-height: 100vh;
 }
 
 #box {
